<resources>

        // Non translatable Strings
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="logo_foreground" translatable="false">Logo foreground</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


        // Translatable Strings

    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="start_filter" >A filter for the image</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="devise">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="title_activity_maps">Map</string>
    <string name="a_restaurant_picture">A picture of restaurant</string>
    <string name="star">A star</string>
    <string name="coworker_picture">Coworker image</string>
    <string name="restaurant_picture">Restaurant image</string>
    <string name="phone_image">Phone image</string>
    <string name="like_image">Like image</string>
    <string name="website_image">Website image</string>
    <string name="call">CALL</string>
    <string name="like">Like</string>
    <string name="website">WEBSITE</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="search">Search</string>
    <string name="workmates">Workmates</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="change_language">Change language</string>
    <string name="choose_language">Choose Language…</string>
    <string name="closing_soon">Closing soon !</string>
    <string name="open_until">Open until </string>
    <string name="closed_until">Closed, opening at </string>
    <string name="schedule_unavailable">Schedule not available</string>
    <string name="hasChoose"> is eating at </string>
    <string name="has_not_choose"> hasn\'t decided yet</string>
    <string name="is_joining"> is joining!</string>
    <string name="not_selected_restaurant_mylunch">You did not select any restaurant to eat at</string>
    <string name="selected_a_restaurant_mylunch">You will eat at </string>
    <string name="the_logo_of_the_app">The logo of the app</string>
    <string name="the_facebook_logo">The facebook logo</string>
    <string name="the_google_logo">The google logo</string>
    <string name="a_picture_of_the_workmate">A picture of the workmate</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="see_restaurant_details">See the restaurant page</string>
    <string name="sunday"> (Sun)</string>
    <string name="monday"> (Mon)</string>
    <string name="tuesday"> (Tue)</string>
    <string name="wednesday"> (Wed)</string>
    <string name="thursday"> (Thu)</string>
    <string name="friday"> (Fri)</string>
    <string name="saturday"> (Sat)</string>
    <string name="open_notification_panel_of_the_app">Open notification panel of the app</string>
    <string name="not_a_valid_email">Please enter a valid email</string>
    <string name="all_field_required">All field are required</string>
    <string name="fail_to_sign_in">Fail to sign in</string>
    <string name="photoref_url" translatable="false"><![CDATA[https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=]]></string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="next_day_open_not_found">Next Open Day Have Not Been Found</string>
    <string name="hungry">I\'m Hungry !</string>
    <string name="available_workmate">Available workmates</string>
    <string name="my_lunch">My Lunch</string>
    <string name="settings_title">Settings</string>
    <string name="request_device_location">If you want to use our app you need to allow device location</string>
    <string name="creation_failed">Account creation failed</string>
    <string name="open_24_7">Open 24/7</string>
    <string name="with_workmate">Will join you :</string>
    <string name="without_workmate">You will be alone</string>
    <string name="no_number_available">No phone number available</string>
    <string name="website_non_available">Website not available</string>
    <string name="disable_notification">Disable notifications</string>
    <string name="notification_activated">Notifications activated</string>
    <string name="activate_notification">Activate notifications</string>
    <string name="notification_unactive">Notifications disabled</string>
    <string name="lunch_is_set_to">Your lunch is set at :</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="create">Create</string>
</resources>
