<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navHeader_Height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/back_screen">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_foreground"
        android:contentDescription="@string/start_filter"/>

    <TextView
        android:id="@+id/nav_header_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/navHeader_App_Title_In_Nav_Header"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/navHeader_App_Title_In_Nav_Header_Margin_Top"
        />

    <ImageView
        android:id="@+id/nav_header_profile_image"
        android:layout_width="@dimen/navHeader_Profil_Image_Side_Size"
        android:layout_height="@dimen/navHeader_Profil_Image_Side_Size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginStart="@dimen/navHeader_Profil_Image_Margin_Start"
        android:layout_marginBottom="@dimen/navHeader_Profil_Image_Margin_Bottom"
        />

    <TextView
        android:id="@+id/nav_header_profil_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/nav_header_profile_image"
        app:layout_constraintLeft_toRightOf="@+id/nav_header_profile_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginStart="@dimen/navHeader_Profil_Name_Margin_Start"
        android:layout_marginTop="@dimen/navHeader_Profil_Name_Margin_Top"
        />

    <TextView
        android:id="@+id/nav_header_profil_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_profil_name"
        app:layout_constraintLeft_toRightOf="@id/nav_header_profile_image"
        android:layout_marginStart="@dimen/navHeader_Profil_Email_Margin_Start"
        android:layout_marginTop="@dimen/navHeader_Profil_Email_Margin_Top"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
