<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.RestaurantDetailActivity">

    <ImageView
        android:id="@+id/detail_restaurant_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/restaurantDetails_Restaurant_Picture_Height"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/restaurant_picture"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_restaurant_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navHeader_Profil_Image_Side_Size"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/orange"
        >

        <TextView
            android:id="@+id/detail_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/restaurantDetails_Restaurant_Name_Size"
            android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Name_Margin_Top"
            android:layout_marginStart="@dimen/restaurantDetails_Restaurant_Name_Margin_Start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:id="@+id/detail_restaurant_rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/detail_restaurant_name"
            app:layout_constraintLeft_toRightOf="@id/detail_restaurant_name"
            app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_name"
            android:layout_marginStart="@dimen/restaurantDetails_Restaurant_Rating_MarginStart"
            android:contentDescription="@string/star"
            />

        <ImageView
            android:id="@+id/detail_restaurant_rating_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/detail_restaurant_name"
            app:layout_constraintLeft_toRightOf="@id/detail_restaurant_rating_1"
            app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_name"
            android:contentDescription="@string/star"
            />
        <ImageView
            android:id="@+id/detail_restaurant_rating_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/detail_restaurant_name"
            app:layout_constraintLeft_toRightOf="@id/detail_restaurant_rating_2"
            app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_name"
            android:contentDescription="@string/star"
            />

        <TextView
            android:id="@+id/detail_restaurant_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/restaurantDetails_Restaurant_Address_Size"
            android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Address_Margin_Top"
            android:layout_marginStart="@dimen/restaurantDetails_Restaurant_Address_Margin_Start"
            android:layout_marginBottom="@dimen/restaurantDetails_Restaurant_Address_Margin_Bottom"
            app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_restaurant_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:id="@+id/detail_restaurant_call_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/detail_restaurant_like_box"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/detail_restaurant_call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/restaurant_phone"
                android:backgroundTint="@color/white"
                android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Button_Margin_Top"
                android:layout_gravity="center"
                android:contentDescription="@string/phone_image"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/detail_restaurant_call_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="@dimen/restaurantDetails_Restaurant_Button_Text_Size"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/call"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_restaurant_like_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/detail_restaurant_call_box"
            app:layout_constraintRight_toRightOf="@id/detail_restaurant_website_box"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/detail_restaurant_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/restaurant_not_liked"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Button_Margin_Top"
            android:layout_gravity="center"
            android:contentDescription="@string/like_image"
            tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/detail_restaurant_like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="@dimen/restaurantDetails_Restaurant_Button_Text_Size"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/like"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_restaurant_website_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/detail_restaurant_like_box"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:elevation="10dp"
            tools:ignore="UnusedAttribute,UseCompoundDrawables">

        <ImageView
            android:id="@+id/detail_restaurant_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/restaurant_website"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Button_Margin_Top"
            android:layout_gravity="center"
            android:contentDescription="@string/website_image"
            />

            <TextView
                android:id="@+id/detail_restaurant_website_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="@dimen/restaurantDetails_Restaurant_Button_Text_Size"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/website"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_restaurant_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/restaurantDetails_Floating_Action_Button_Margin_End"
        app:backgroundTint="#FFFFFF"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_picture"
        app:layout_constraintRight_toRightOf="@id/detail_restaurant_picture"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_picture"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_restaurant_list_coworkers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scrollbars="vertical"
        tools:listitem="@layout/workmate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>