<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_for_activity_start_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_screen"
    tools:context=".controller.activities.StartActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/foreground"
        android:contentDescription="@string/start_filter" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_for_logo_and_devise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_on_login_screen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/startActivity_logo_size"
            android:contentDescription="@string/the_logo_of_the_app"
            app:layout_constraintTop_toTopOf="@id/container_for_logo_and_devise"
            app:srcCompat="@drawable/logo_app_foreground"
            tools:ignore="VectorDrawableCompat"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/start_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/startActivity_title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/start_devise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/devise"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/startActivity_devise_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/start_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/navHeader_App_Title_In_Nav_Header_Margin_Top"
        android:layout_weight="1"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_for_logo_and_devise">

        <LinearLayout
            android:id="@+id/text_box_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="5dp"
                android:hint="Username"
                android:inputType="text" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_margin="5dp"
                android:hint="email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_box_email_login"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/restaurantDetails_Restaurant_Name_Margin_Top"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/cancel_button_email_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="Cancel" />

            <Button
                android:id="@+id/sign_in_button_email_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="Sign in" />

            <Button
                android:id="@+id/create_button_email_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="Create" />


        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>