<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/restaurant_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/restaurant_open_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/restaurant_info"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_info"
        android:layout_marginTop="2dp"
        />

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="80dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@id/restaurant_name"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_open_hours"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/a_restaurant_picture"
        />

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/light_grey"
        app:layout_constraintTop_toTopOf="@id/restaurant_name"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        android:layout_marginEnd="10dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_box_coworker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name"
        app:layout_constraintBottom_toTopOf="@id/restaurant_open_hours"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        >

        <ImageView
            android:id="@+id/restaurant_coworker_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/restaurant_number_of_coworker"
            android:contentDescription="@string/coworker_picture"
            android:src="@drawable/restaurant_coworker"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/restaurant_number_of_coworker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/restaurant_stars_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/restaurant_open_hours"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_open_hours"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        android:src="@drawable/restaurant_star"
        android:visibility="gone"
        android:contentDescription="@string/star"
        />

    <ImageView
        android:id="@+id/restaurant_stars_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/restaurant_open_hours"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_open_hours"
        app:layout_constraintRight_toLeftOf="@id/restaurant_stars_1"
        android:src="@drawable/restaurant_star"
        android:visibility="gone"
        android:contentDescription="@string/star"
        />

    <ImageView
        android:id="@+id/restaurant_stars_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/restaurant_open_hours"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_open_hours"
        app:layout_constraintRight_toLeftOf="@id/restaurant_stars_2"
        android:src="@drawable/restaurant_star"
        android:visibility="gone"
        android:contentDescription="@string/star"
        />

</androidx.constraintlayout.widget.ConstraintLayout>